--- a/PLB_HYP_EEG_Preproecessing.ipynb
+++ b/PLB_HYP_EEG_Preproecessing.ipynb
@@ -37,24 +37,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "u9_R1PNGyt7n"
-      },
-      "source": [
-        "! sudo apt-get install texlive-latex-recommended \n",
-        "! sudo apt install texlive-latex-extra\n",
-        "! sudo apt install dvipng"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "xBd6VJF4WuVm",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b77c00a0-e8e6-4839-bcec-5a145ba6e383"
+        "outputId": "b43bb0cb-f837-4af8-90a7-43afcab85681"
       },
       "source": [
         "# install necessary tools\n",
@@ -69,42 +56,42 @@
           "text": [
             "Collecting mne\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/17/a8/7d8a10345082d4807907a268016b52dfa869b0c412cd84aa1d1de86e1e39/mne-0.22.0-py3-none-any.whl (6.9MB)\n",
-            "\u001b[K     |████████████████████████████████| 6.9MB 3.7MB/s \n",
-            "\u001b[?25hRequirement already satisfied: scipy>=0.17.1 in /usr/local/lib/python3.7/dist-packages (from mne) (1.4.1)\n",
-            "Requirement already satisfied: numpy>=1.11.3 in /usr/local/lib/python3.7/dist-packages (from mne) (1.19.5)\n",
+            "\u001b[K     |████████████████████████████████| 6.9MB 6.1MB/s \n",
+            "\u001b[?25hRequirement already satisfied: numpy>=1.11.3 in /usr/local/lib/python3.7/dist-packages (from mne) (1.19.5)\n",
+            "Requirement already satisfied: scipy>=0.17.1 in /usr/local/lib/python3.7/dist-packages (from mne) (1.4.1)\n",
             "Installing collected packages: mne\n",
             "Successfully installed mne-0.22.0\n",
             "Requirement already satisfied: PyDrive in /usr/local/lib/python3.7/dist-packages (1.3.1)\n",
-            "Requirement already satisfied: oauth2client>=4.0.0 in /usr/local/lib/python3.7/dist-packages (from PyDrive) (4.1.3)\n",
             "Requirement already satisfied: google-api-python-client>=1.2 in /usr/local/lib/python3.7/dist-packages (from PyDrive) (1.12.8)\n",
+            "Requirement already satisfied: oauth2client>=4.0.0 in /usr/local/lib/python3.7/dist-packages (from PyDrive) (4.1.3)\n",
             "Requirement already satisfied: PyYAML>=3.0 in /usr/local/lib/python3.7/dist-packages (from PyDrive) (3.13)\n",
-            "Requirement already satisfied: pyasn1>=0.1.7 in /usr/local/lib/python3.7/dist-packages (from oauth2client>=4.0.0->PyDrive) (0.4.8)\n",
-            "Requirement already satisfied: rsa>=3.1.4 in /usr/local/lib/python3.7/dist-packages (from oauth2client>=4.0.0->PyDrive) (4.7.2)\n",
-            "Requirement already satisfied: httplib2>=0.9.1 in /usr/local/lib/python3.7/dist-packages (from oauth2client>=4.0.0->PyDrive) (0.17.4)\n",
-            "Requirement already satisfied: pyasn1-modules>=0.0.5 in /usr/local/lib/python3.7/dist-packages (from oauth2client>=4.0.0->PyDrive) (0.2.8)\n",
-            "Requirement already satisfied: six>=1.6.1 in /usr/local/lib/python3.7/dist-packages (from oauth2client>=4.0.0->PyDrive) (1.15.0)\n",
-            "Requirement already satisfied: google-auth-httplib2>=0.0.3 in /usr/local/lib/python3.7/dist-packages (from google-api-python-client>=1.2->PyDrive) (0.0.4)\n",
-            "Requirement already satisfied: uritemplate<4dev,>=3.0.0 in /usr/local/lib/python3.7/dist-packages (from google-api-python-client>=1.2->PyDrive) (3.0.1)\n",
-            "Requirement already satisfied: google-api-core<2dev,>=1.21.0 in /usr/local/lib/python3.7/dist-packages (from google-api-python-client>=1.2->PyDrive) (1.26.1)\n",
             "Requirement already satisfied: google-auth>=1.16.0 in /usr/local/lib/python3.7/dist-packages (from google-api-python-client>=1.2->PyDrive) (1.27.1)\n",
-            "Requirement already satisfied: requests<3.0.0dev,>=2.18.0 in /usr/local/lib/python3.7/dist-packages (from google-api-core<2dev,>=1.21.0->google-api-python-client>=1.2->PyDrive) (2.23.0)\n",
-            "Requirement already satisfied: googleapis-common-protos<2.0dev,>=1.6.0 in /usr/local/lib/python3.7/dist-packages (from google-api-core<2dev,>=1.21.0->google-api-python-client>=1.2->PyDrive) (1.53.0)\n",
-            "Requirement already satisfied: protobuf>=3.12.0 in /usr/local/lib/python3.7/dist-packages (from google-api-core<2dev,>=1.21.0->google-api-python-client>=1.2->PyDrive) (3.12.4)\n",
-            "Requirement already satisfied: pytz in /usr/local/lib/python3.7/dist-packages (from google-api-core<2dev,>=1.21.0->google-api-python-client>=1.2->PyDrive) (2018.9)\n",
-            "Requirement already satisfied: setuptools>=40.3.0 in /usr/local/lib/python3.7/dist-packages (from google-api-core<2dev,>=1.21.0->google-api-python-client>=1.2->PyDrive) (54.0.0)\n",
-            "Requirement already satisfied: packaging>=14.3 in /usr/local/lib/python3.7/dist-packages (from google-api-core<2dev,>=1.21.0->google-api-python-client>=1.2->PyDrive) (20.9)\n",
+            "Requirement already satisfied: uritemplate<4dev,>=3.0.0 in /usr/local/lib/python3.7/dist-packages (from google-api-python-client>=1.2->PyDrive) (3.0.1)\n",
+            "Requirement already satisfied: google-auth-httplib2>=0.0.3 in /usr/local/lib/python3.7/dist-packages (from google-api-python-client>=1.2->PyDrive) (0.0.4)\n",
+            "Requirement already satisfied: six<2dev,>=1.13.0 in /usr/local/lib/python3.7/dist-packages (from google-api-python-client>=1.2->PyDrive) (1.15.0)\n",
+            "Requirement already satisfied: google-api-core<2dev,>=1.21.0 in /usr/local/lib/python3.7/dist-packages (from google-api-python-client>=1.2->PyDrive) (1.26.1)\n",
+            "Requirement already satisfied: httplib2<1dev,>=0.15.0 in /usr/local/lib/python3.7/dist-packages (from google-api-python-client>=1.2->PyDrive) (0.17.4)\n",
+            "Requirement already satisfied: rsa>=3.1.4 in /usr/local/lib/python3.7/dist-packages (from oauth2client>=4.0.0->PyDrive) (4.7.2)\n",
+            "Requirement already satisfied: pyasn1>=0.1.7 in /usr/local/lib/python3.7/dist-packages (from oauth2client>=4.0.0->PyDrive) (0.4.8)\n",
+            "Requirement already satisfied: pyasn1-modules>=0.0.5 in /usr/local/lib/python3.7/dist-packages (from oauth2client>=4.0.0->PyDrive) (0.2.8)\n",
+            "Requirement already satisfied: setuptools>=40.3.0 in /usr/local/lib/python3.7/dist-packages (from google-auth>=1.16.0->google-api-python-client>=1.2->PyDrive) (54.0.0)\n",
             "Requirement already satisfied: cachetools<5.0,>=2.0.0 in /usr/local/lib/python3.7/dist-packages (from google-auth>=1.16.0->google-api-python-client>=1.2->PyDrive) (4.2.1)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests<3.0.0dev,>=2.18.0->google-api-core<2dev,>=1.21.0->google-api-python-client>=1.2->PyDrive) (2020.12.5)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests<3.0.0dev,>=2.18.0->google-api-core<2dev,>=1.21.0->google-api-python-client>=1.2->PyDrive) (2.10)\n",
+            "Requirement already satisfied: pytz in /usr/local/lib/python3.7/dist-packages (from google-api-core<2dev,>=1.21.0->google-api-python-client>=1.2->PyDrive) (2018.9)\n",
+            "Requirement already satisfied: requests<3.0.0dev,>=2.18.0 in /usr/local/lib/python3.7/dist-packages (from google-api-core<2dev,>=1.21.0->google-api-python-client>=1.2->PyDrive) (2.23.0)\n",
+            "Requirement already satisfied: packaging>=14.3 in /usr/local/lib/python3.7/dist-packages (from google-api-core<2dev,>=1.21.0->google-api-python-client>=1.2->PyDrive) (20.9)\n",
+            "Requirement already satisfied: protobuf>=3.12.0 in /usr/local/lib/python3.7/dist-packages (from google-api-core<2dev,>=1.21.0->google-api-python-client>=1.2->PyDrive) (3.12.4)\n",
+            "Requirement already satisfied: googleapis-common-protos<2.0dev,>=1.6.0 in /usr/local/lib/python3.7/dist-packages (from google-api-core<2dev,>=1.21.0->google-api-python-client>=1.2->PyDrive) (1.53.0)\n",
             "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests<3.0.0dev,>=2.18.0->google-api-core<2dev,>=1.21.0->google-api-python-client>=1.2->PyDrive) (1.24.3)\n",
             "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests<3.0.0dev,>=2.18.0->google-api-core<2dev,>=1.21.0->google-api-python-client>=1.2->PyDrive) (3.0.4)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests<3.0.0dev,>=2.18.0->google-api-core<2dev,>=1.21.0->google-api-python-client>=1.2->PyDrive) (2.10)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests<3.0.0dev,>=2.18.0->google-api-core<2dev,>=1.21.0->google-api-python-client>=1.2->PyDrive) (2020.12.5)\n",
             "Requirement already satisfied: pyparsing>=2.0.2 in /usr/local/lib/python3.7/dist-packages (from packaging>=14.3->google-api-core<2dev,>=1.21.0->google-api-python-client>=1.2->PyDrive) (2.4.7)\n",
             "Collecting mne_bids\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/09/b3/925b2c8c8fcb4d5f8c6a1c821658691bb3aad3a392415f7f66494e8d88a2/mne_bids-0.6-py3-none-any.whl (93kB)\n",
-            "\u001b[K     |████████████████████████████████| 102kB 3.8MB/s \n",
-            "\u001b[?25hRequirement already satisfied: scipy>=0.18.1 in /usr/local/lib/python3.7/dist-packages (from mne_bids) (1.4.1)\n",
+            "\u001b[K     |████████████████████████████████| 102kB 3.9MB/s \n",
+            "\u001b[?25hRequirement already satisfied: numpy>=1.14 in /usr/local/lib/python3.7/dist-packages (from mne_bids) (1.19.5)\n",
+            "Requirement already satisfied: scipy>=0.18.1 in /usr/local/lib/python3.7/dist-packages (from mne_bids) (1.4.1)\n",
             "Requirement already satisfied: mne>=0.21 in /usr/local/lib/python3.7/dist-packages (from mne_bids) (0.22.0)\n",
-            "Requirement already satisfied: numpy>=1.14 in /usr/local/lib/python3.7/dist-packages (from mne_bids) (1.19.5)\n",
             "Installing collected packages: mne-bids\n",
             "Successfully installed mne-bids-0.6\n"
           ],
@@ -145,7 +132,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5njo4gL_hJID",
-        "outputId": "e2dc11e8-1efd-467d-c222-62868e651b6b"
+        "outputId": "dbb96a49-32e0-4197-a8b4-a1318f9895d5"
       },
       "source": [
         "# Mount Google Drive\n",
@@ -209,7 +196,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "905d69b6-0fe8-4515-ef79-52c2194343bf"
+        "outputId": "2acb426d-07db-4969-a40c-7961c6823a33"
       },
       "source": [
         "# Open EEG data\n",
@@ -263,7 +250,7 @@
         "# visualize data's power spectrum density\n",
         "raw.plot_psd(fmax= 70)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -313,7 +300,7 @@
       "source": [
         "raw.plot(duration=5, start= 2000, n_channels=61)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -358,7 +345,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FS46uE4M64bD",
-        "outputId": "25288692-423e-439b-bdd4-1c190d43d105"
+        "outputId": "de5b78ed-d1af-48d4-c0b8-33b62fe39110"
       },
       "source": [
         "# Parsing the continuous data\n",
@@ -371,10 +358,7 @@
         "# create events array from annotations\n",
         "events, event_dict = mne.events_from_annotations(raw)\n",
         "print(event_dict)\n",
-        "print(events)\n",
-        "\n",
-        "# epochs\n",
-        "epochs = mne.Epochs(raw, events)"
+        "print(events)"
       ],
       "execution_count": 5,
       "outputs": [
@@ -383,7 +367,7 @@
           "text": [
             "23\n",
             "{0.001}\n",
-            "{'Stimulus/S  8', 'Stimulus/S  9', 'New Segment/', 'Stimulus/S  3', 'Stimulus/S  1', 'Stimulus/S  5', 'Stimulus/S  6', 'Stimulus/S  4', 'Stimulus/S  7', 'Stimulus/S  2'}\n",
+            "{'Stimulus/S  9', 'Stimulus/S  8', 'Stimulus/S  3', 'Stimulus/S  4', 'Stimulus/S  7', 'Stimulus/S  6', 'Stimulus/S  5', 'New Segment/', 'Stimulus/S  1', 'Stimulus/S  2'}\n",
             "0.0\n",
             "Used Annotations descriptions: ['New Segment/', 'Stimulus/S  1', 'Stimulus/S  2', 'Stimulus/S  3', 'Stimulus/S  4', 'Stimulus/S  5', 'Stimulus/S  6', 'Stimulus/S  7', 'Stimulus/S  8', 'Stimulus/S  9']\n",
             "{'New Segment/': 99999, 'Stimulus/S  1': 1, 'Stimulus/S  2': 2, 'Stimulus/S  3': 3, 'Stimulus/S  4': 4, 'Stimulus/S  5': 5, 'Stimulus/S  6': 6, 'Stimulus/S  7': 7, 'Stimulus/S  8': 8, 'Stimulus/S  9': 9}\n",
@@ -409,7 +393,30 @@
             " [5271949       0       6]\n",
             " [5688327       0       7]\n",
             " [5875319       0       8]\n",
-            " [6218023       0       9]]\n",
+            " [6218023       0       9]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Vzx9AOX48mXp",
+        "outputId": "69af1ac7-1f9e-4a17-eec8-e75307b35bfe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# epochs\n",
+        "epochs = mne.Epochs(raw, events)"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
             "Not setting metadata\n",
             "Not setting metadata\n",
             "23 matching events found\n",
