--- a/notebooks/Playground.ipynb
+++ b/notebooks/Playground.ipynb
@@ -29,11 +29,7 @@
     "\n",
     "import torch\n",
     "from torch import nn\n",
-    "from torch.utils.tensorboard import SummaryWriter\n",
-    "\n",
-    "import pytorch_lightning as pl\n",
-    "import faulthandler\n",
-    "faulthandler.enable()"
+    "import pytorch_lightning as pl"
    ]
   },
   {
