--- a/notebooks/Playground.ipynb
+++ b/notebooks/Playground.ipynb
@@ -27,72 +27,8 @@
     "%reload_ext autoreload\n",
     "%autoreload 3\n",
     "\n",
-    "import torch\n",
-    "from torch import nn\n",
-    "import pytorch_lightning as pl"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# DATA\n",
-    "class MyDataModule(pl.LightningDataModule):\n",
-    "    def prepare_data(self):\n",
-    "        X_input = torch.randn(50, 128*60, 58)\n",
-    "        X_output = torch.randn(1, 128*60, 58).repeat(50, 1, 1)\n",
-    "        y_class = torch.randint(low=0, high=3, size=(50,))\n",
-    "        y_text = torch.randn(50, 1024)\n",
-    "\n",
-    "        self.train_dataset = torch.utils.data.TensorDataset(X_input, X_output, y_class, y_text)\n",
-    "        self.val_dataset = torch.utils.data.TensorDataset(X_input, X_output, y_class, y_text)\n",
-    "        \n",
-    "    def train_dataloader(self):\n",
-    "        return torch.utils.data.DataLoader(self.train_dataset, batch_size=32)\n",
-    "\n",
-    "    def val_dataloader(self):\n",
-    "        return torch.utils.data.DataLoader(self.val_dataset, batch_size=32)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# MODEL\n",
-    "class MyModel(pl.LightningModule):\n",
-    "    def __init__(self):\n",
-    "        super().__init__()\n",
-    "        self.rnn = nn.RNN(input_size=58, hidden_size=2, num_layers=1, batch_first=True)\n",
-    "        self.fc = nn.Linear(2, 3)\n",
-    "        self.loss = nn.CrossEntropyLoss()\n",
-    "    \n",
-    "    def forward(self, x):\n",
-    "        h, y = self.rnn(x)\n",
-    "        y = self.fc(y)\n",
-    "        y = y.permute(1, 0, 2).squeeze(1)\n",
-    "        # y = torch.argmax(y, dim=2).to(torch.float)\n",
-    "        return y\n",
-    "    \n",
-    "    def training_step(self, batch, batch_idx):\n",
-    "        X_input, X_output, y_class, y_text = batch\n",
-    "        y_hat = self(X_input)\n",
-    "        loss = self.loss(y_hat, y_class)\n",
-    "        self.log('train/loss', loss)\n",
-    "        return loss\n",
-    "    \n",
-    "    def validation_step(self, batch, batch_idx):\n",
-    "        X_input, X_output, y_class, y_text = batch\n",
-    "        y_hat = self(X_input)\n",
-    "        loss = self.loss(y_hat, y_class)\n",
-    "        self.log('val/loss', loss)\n",
-    "        return loss\n",
-    "    \n",
-    "    def configure_optimizers(self):\n",
-    "        return torch.optim.Adam(self.parameters(), lr=1e-3)"
+    "import pytorch_lightning as pl\n",
+    "from src.b2bnet import B2BNetModel, RandomDataModule"
    ]
   },
   {
@@ -166,8 +102,8 @@
    ],
    "source": [
     "# TRAINING\n",
-    "model = MyModel()\n",
-    "datamodule = MyDataModule()\n",
+    "model = B2BNetModel()\n",
+    "datamodule = RandomDataModule()\n",
     "trainer = pl.Trainer(max_epochs=50, accelerator='cpu', logger=True, log_every_n_steps=1)\n",
     "\n",
     "trainer.fit(model, datamodule=datamodule)"
