multihead b2b + evaluation using random data

--- a/notebooks/Playground.ipynb
+++ b/notebooks/Playground.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -45,22 +45,28 @@
       "IPU available: False, using: 0 IPUs\n",
       "HPU available: False, using: 0 HPUs\n",
       "\n",
-      "  | Name | Type             | Params\n",
-      "------------------------------------------\n",
-      "0 | rnn  | RNN              | 124   \n",
-      "1 | fc   | Linear           | 9     \n",
-      "2 | loss | CrossEntropyLoss | 0     \n",
-      "------------------------------------------\n",
-      "133       Trainable params\n",
+      "  | Name        | Type             | Params\n",
+      "-------------------------------------------------\n",
+      "0 | encoder     | RNN              | 1.6 K \n",
+      "1 | fc          | Linear           | 9     \n",
+      "2 | decoder     | RNN              | 872 K \n",
+      "3 | b2b         | RNN              | 872 K \n",
+      "4 | fc_text     | Linear           | 3.1 K \n",
+      "5 | loss_cls    | CrossEntropyLoss | 0     \n",
+      "6 | loss_reconn | MSELoss          | 0     \n",
+      "7 | loss_b2b    | MSELoss          | 0     \n",
+      "8 | loss_text   | MSELoss          | 0     \n",
+      "-------------------------------------------------\n",
+      "1.8 M     Trainable params\n",
       "0         Non-trainable params\n",
-      "133       Total params\n",
-      "0.001     Total estimated model params size (MB)\n"
+      "1.8 M     Total params\n",
+      "7.001     Total estimated model params size (MB)\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7aab683dab23493ab4a6d63467ac61ba",
+       "model_id": "11cbf1862616484fb3912947e7debe09",
        "version_major": 2,
        "version_minor": 0
       },
@@ -74,7 +80,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "08bd286e246b4dc69565c21ee269a00a",
+       "model_id": "a9236e7d88944dd49a5176d4c3077a10",
        "version_major": 2,
        "version_minor": 0
       },
@@ -88,7 +94,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e8e20a99b514e6286deacd99ec5289f",
+       "model_id": "a04762efe9a644a08205de497993012f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -98,13 +104,34 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2fc45549e04f4c70b4449e8770ab690a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "`Trainer.fit` stopped: `max_epochs=2` reached.\n"
+     ]
     }
    ],
    "source": [
     "# TRAINING\n",
     "model = B2BNetModel()\n",
     "datamodule = RandomDataModule()\n",
-    "trainer = pl.Trainer(max_epochs=50, accelerator='cpu', logger=True, log_every_n_steps=1)\n",
+    "trainer = pl.Trainer(max_epochs=2, accelerator='cpu', logger=True, log_every_n_steps=1)\n",
     "\n",
     "trainer.fit(model, datamodule=datamodule)"
    ]
