process y_b2b (hypnotist's data).

--- a/notebooks/0 Prepare Input.ipynb
+++ b/notebooks/0 Prepare Input.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,10 +31,9 @@
     "from src.b2bnet.data.prepare_data import preprocess_data\n",
     "\n",
     "import numpy as np\n",
-    "import mne\n",
-    "from pathlib import Path\n",
     "import xarray as xr\n",
     "import pandas as pd\n",
+    "import mne\n",
     "\n",
     "# read BIDS dataset from external drive\n",
     "eeg_path = '/Volumes/Extreme SSD/PhD/OTKA study1/EEG data/BIDS/'\n",
@@ -45,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,8 +71,8 @@
     "        task=task,\n",
     "        resampling_frq=120,\n",
     "        ref_chs='average',\n",
-    "        filter_bounds=(1, 50),\n",
-    "        verbose=False\n",
+    "        filter_bounds=None,\n",
+    "        verbose=True\n",
     "    )\n",
     "    # create a xarray\n",
     "    da = xr.DataArray(\n",
@@ -89,6 +88,51 @@
     "    \n",
     "## save dataset\n",
     "# ds.to_netcdf('data/input.nc')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## hypnotist's data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# open data and pick eeg channels\n",
+    "raw = mne.io.read_raw_brainvision('data/EEG/hypnotist/Relaxation_whole.vhdr',\n",
+    "                                  misc=['EMG1', 'EMG2', 'EMG3', 'ECG'],\n",
+    "                                  eog=['EOG1', 'EOG2'],\n",
+    "                                  verbose=False)\n",
+    "raw.pick_types(eeg=True)\n",
+    "\n",
+    "# CUT: time onsets determined by visual inspection of the raw data (see src/b2bnet/inspect_hypnotist_data.py)\n",
+    "tmax = 424\n",
+    "tmin = 84\n",
+    "raw.crop(tmin=tmin, tmax=tmax)\n",
+    "\n",
+    "raw.resample(120)\n",
+    "\n",
+    "raw.add_reference_channels(ref_channels='FCz')\n",
+    "raw.set_eeg_reference(ref_channels='average', verbose=False)\n",
+    "\n",
+    "\n",
+    "da = xr.DataArray(\n",
+    "    data=raw.get_data(),\n",
+    "    dims=[\"channels\", \"time\"],\n",
+    "    coords={\n",
+    "        \"channels\": raw.ch_names,\n",
+    "        \"time\": np.arange(0, raw.get_data().shape[1])\n",
+    "                          }\n",
+    "    )\n",
+    "\n",
+    "# save dataarray\n",
+    "da.to_netcdf('data/hypnotist.nc')"
    ]
   }
  ],
