change "prepare_data" file's name to "input"

--- a/notebooks/0 Prepare Input.ipynb
+++ b/notebooks/0 Prepare Input.ipynb
@@ -28,7 +28,7 @@
     "%reload_ext autoreload\n",
     "%autoreload 3\n",
     "\n",
-    "from src.b2bnet.data.prepare_data import preprocess_data\n",
+    "from src.b2bnet.data.input import process_input\n",
     "\n",
     "import numpy as np\n",
     "import xarray as xr\n",
@@ -65,7 +65,7 @@
     "# open relaxation eeg files\n",
     "for sub in relax_ses['bids_id'].unique()[:-1]:  # exclude sub_52 because of missing data\n",
     "    task = 'induction' + str(relax_ses.query('bids_id == @sub')['session'].values[0])\n",
-    "    eeg_data = preprocess_data(\n",
+    "    eeg_data = process_input(\n",
     "        path=eeg_path,\n",
     "        subject=sub,\n",
     "        task=task,\n",
