--- a/notebooks/0 Prepare Input.ipynb
+++ b/notebooks/0 Prepare Input.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,11 @@
     "relax_ses = data.query('procedure == \"relaxation\"')[['bids_id', 'session']].reset_index(drop=True)\n",
     "\n",
     "# Change bids id to match file names\n",
-    "relax_ses['bids_id'] = relax_ses['bids_id'].astype('int').astype('str').str.zfill(2)"
+    "relax_ses['bids_id'] = relax_ses['bids_id'].astype('int').astype('str').str.zfill(2)\n",
+    "\n",
+    "# create y_class and save it\n",
+    "y_class = data.query('procedure == \"relaxation\"')['score'].apply(lambda x:1 if x >= 5 else 0)\n",
+    "# y_class.to_csv('data/behavioral/relaxation_class.csv', index=False)"
    ]
   },
   {
