fix bugs in otka data import

--- a/notebooks/0 Prepare Input.ipynb
+++ b/notebooks/0 Prepare Input.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,6 +29,7 @@
     "%autoreload 3\n",
     "\n",
     "from src.b2bnet.data.input import process_input\n",
+    "from IPython.display import clear_output\n",
     "\n",
     "import numpy as np\n",
     "import xarray as xr\n",
@@ -37,6 +38,7 @@
     "\n",
     "# read BIDS dataset from external drive\n",
     "eeg_path = '/Volumes/Extreme SSD/PhD/OTKA study1/EEG data/BIDS/'\n",
+    "behvioral_path = '~/Codes/otka_data/behavioral/behavioral_data.csv'\n",
     "\n",
     "# collector dataset\n",
     "ds = xr.Dataset()"
@@ -44,54 +46,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Find relaxation session number (The dataset only include the relaxation procedure)\n",
-    "data = pd.read_csv('data/behavioral/behavioral_data.csv')\n",
+    "data = pd.read_csv(behvioral_path)\n",
     "relax_ses = data.query('procedure == \"relaxation\"')[['bids_id', 'session']].reset_index(drop=True)\n",
     "\n",
     "# Change bids id to match file names\n",
     "relax_ses['bids_id'] = relax_ses['bids_id'].astype('int').astype('str').str.zfill(2)\n",
     "\n",
-    "# create y_class and save it\n",
-    "y_class = data.query('procedure == \"relaxation\"')['score'].apply(lambda x:1 if x >= 5 else 0)\n",
-    "# y_class.to_csv('data/behavioral/relaxation_class.csv', index=False)"
+    "# create y_class dataarray\n",
+    "y_class = data.query('procedure == \"relaxation\"')['score'].apply(lambda x:1 if x >= 5 else 0)[:-1]\n",
+    "# da_class = xr.DataArray(data=y_class.values, dims=[\"behavioral\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
     "# open relaxation eeg files\n",
-    "for sub in relax_ses['bids_id'].unique()[:-1]:  # exclude sub_52 because of missing data\n",
-    "    task = 'induction' + str(relax_ses.query('bids_id == @sub')['session'].values[0])\n",
+    "def load_subject_data(subj):\n",
+    "    task = 'induction' + str(relax_ses.query('bids_id == @subj')['session'].values[0])\n",
     "    eeg_data = process_input(\n",
     "        path=eeg_path,\n",
-    "        subject=sub,\n",
+    "        subject=subj,\n",
     "        task=task,\n",
     "        resampling_frq=120,\n",
     "        ref_chs='average',\n",
     "        filter_bounds=None,\n",
-    "        verbose=True\n",
-    "    )\n",
-    "    # create a xarray\n",
-    "    da = xr.DataArray(\n",
-    "    data=eeg_data.get_data(),\n",
-    "    dims=[\"channels\", \"time\"],\n",
-    "    coords={\n",
-    "        \"channels\": eeg_data.ch_names,\n",
-    "        \"time\": np.arange(0, eeg_data.get_data().shape[1])\n",
-    "                          }\n",
-    "    )\n",
-    "    \n",
-    "    ds = ds.update({f'sub_{sub}': da})\n",
-    "    \n",
-    "## save dataset\n",
-    "# ds.to_netcdf('data/input.nc')"
+    "        verbose=False\n",
+    "    )       \n",
+    "    return eeg_data.get_data()[:, :39707]\n",
+    "\n",
+    "all_eeg_data = [load_subject_data(subj) for subj in relax_ses['bids_id'].unique()[:-1]]\n",
+    "clear_output()"
    ]
   },
   {
@@ -109,34 +101,37 @@
    "outputs": [],
    "source": [
     "# open data and pick eeg channels\n",
-    "raw = mne.io.read_raw_brainvision('data/EEG/hypnotist/Relaxation_whole.vhdr',\n",
+    "from pathlib import Path\n",
+    "hypotist_path = Path('~/Codes/otka_data/EEG/hypnotist/Relaxation_whole.vhdr').expanduser()\n",
+    "hypnotist_raw = mne.io.read_raw_brainvision(hypotist_path,\n",
     "                                  misc=['EMG1', 'EMG2', 'EMG3', 'ECG'],\n",
     "                                  eog=['EOG1', 'EOG2'],\n",
     "                                  verbose=False)\n",
-    "raw.pick_types(eeg=True)\n",
+    "hypnotist_raw.pick_types(eeg=True)\n",
     "\n",
     "# CUT: time onsets determined by visual inspection of the raw data (see src/b2bnet/inspect_hypnotist_data.py)\n",
     "tmax = 424\n",
     "tmin = 84\n",
-    "raw.crop(tmin=tmin, tmax=tmax)\n",
+    "hypnotist_raw.crop(tmin=tmin, tmax=tmax)\n",
     "\n",
-    "raw.resample(120)\n",
+    "hypnotist_raw.resample(120)\n",
     "\n",
-    "raw.add_reference_channels(ref_channels='FCz')\n",
-    "raw.set_eeg_reference(ref_channels='average', verbose=False)\n",
-    "\n",
-    "\n",
-    "da = xr.DataArray(\n",
-    "    data=raw.get_data(),\n",
-    "    dims=[\"channels\", \"time\"],\n",
-    "    coords={\n",
-    "        \"channels\": raw.ch_names,\n",
-    "        \"time\": np.arange(0, raw.get_data().shape[1])\n",
-    "                          }\n",
-    "    )\n",
-    "\n",
-    "# save dataarray\n",
-    "da.to_netcdf('data/hypnotist.nc')"
+    "hypnotist_raw.add_reference_channels(ref_channels='FCz')\n",
+    "hypnotist_raw.set_eeg_reference(ref_channels='average', verbose=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# merge datasets and save\n",
+    "ds = xr.Dataset({'hypnotee': (['subject', 'channel', 'timestep_hypnotee'], all_eeg_data),\n",
+    "                 'hypnotist': (['channel', 'timestep_hypnotist'], hypnotist_raw.get_data()),\n",
+    "                 'y_class': (['subject'], y_class.values)})\n",
+    "ds.to_netcdf('data/otka.nc5', engine='h5netcdf')\n",
+    "ds.close()"
    ]
   }
  ],
