--- a/notebooks/Playground.ipynb
+++ b/notebooks/Playground.ipynb
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,96 +187,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([32, 59, 40000])"
+       "torch.Size([32, 59, 160])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "batch_size = 32\n",
-    "n_timesteps = 40000\n",
+    "n_timesteps = 128 * 320\n",
     "n_features = 59\n",
     "X = torch.randn(batch_size, n_timesteps, n_features).permute(0, 2, 1)\n",
-    "model = TCN(n_timesteps, output_length=128, n_features=n_features, kernel_size=2, dilation_base=2)\n",
+    "model = TCN(n_timesteps, output_length=128, n_features=n_features, kernel_size=8, dilation_base=2)\n",
     "model(X).shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/morteza/micromamba/envs/b2bnet/lib/python3.10/site-packages/torchinfo/torchinfo.py:477: UserWarning: TypedStorage is deprecated. It will be removed in the future and UntypedStorage will be the only storage class. This should only matter to you if you are using storages directly.  To access UntypedStorage directly, use tensor.untyped_storage() instead of tensor.storage()\n",
-      "  action_fn=lambda data: sys.getsizeof(data.storage()),\n",
-      "/Users/morteza/micromamba/envs/b2bnet/lib/python3.10/site-packages/torch/storage.py:665: UserWarning: TypedStorage is deprecated. It will be removed in the future and UntypedStorage will be the only storage class. This should only matter to you if you are using storages directly.  To access UntypedStorage directly, use tensor.untyped_storage() instead of tensor.storage()\n",
-      "  return super().__sizeof__() + self.nbytes()\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "==========================================================================================\n",
        "Layer (type:depth-idx)                   Output Shape              Param #\n",
        "==========================================================================================\n",
-       "TCN                                      [32, 59, 40000]           --\n",
-       "├─Sequential: 1-1                        [32, 59, 40000]           --\n",
-       "│    └─TCNBlock: 2-1                     [32, 59, 40000]           --\n",
-       "│    │    └─Sequential: 3-1              [32, 59, 40000]           7,021\n",
-       "│    └─TCNBlock: 2-2                     [32, 59, 40000]           --\n",
-       "│    │    └─Sequential: 3-2              [32, 59, 40000]           7,021\n",
-       "│    └─TCNBlock: 2-3                     [32, 59, 40000]           --\n",
-       "│    │    └─Sequential: 3-3              [32, 59, 40000]           7,021\n",
-       "│    └─TCNBlock: 2-4                     [32, 59, 40000]           --\n",
-       "│    │    └─Sequential: 3-4              [32, 59, 40000]           7,021\n",
-       "│    └─TCNBlock: 2-5                     [32, 59, 40000]           --\n",
-       "│    │    └─Sequential: 3-5              [32, 59, 40000]           7,021\n",
-       "│    └─TCNBlock: 2-6                     [32, 59, 40000]           --\n",
-       "│    │    └─Sequential: 3-6              [32, 59, 40000]           7,021\n",
-       "│    └─TCNBlock: 2-7                     [32, 59, 40000]           --\n",
-       "│    │    └─Sequential: 3-7              [32, 59, 40000]           7,021\n",
-       "│    └─TCNBlock: 2-8                     [32, 59, 40000]           --\n",
-       "│    │    └─Sequential: 3-8              [32, 59, 40000]           7,021\n",
-       "│    └─TCNBlock: 2-9                     [32, 59, 40000]           --\n",
-       "│    │    └─Sequential: 3-9              [32, 59, 40000]           7,021\n",
-       "│    └─TCNBlock: 2-10                    [32, 59, 40000]           --\n",
-       "│    │    └─Sequential: 3-10             [32, 59, 40000]           7,021\n",
-       "│    └─TCNBlock: 2-11                    [32, 59, 40000]           --\n",
-       "│    │    └─Sequential: 3-11             [32, 59, 40000]           7,021\n",
-       "│    └─TCNBlock: 2-12                    [32, 59, 40000]           --\n",
-       "│    │    └─Sequential: 3-12             [32, 59, 40000]           7,021\n",
-       "│    └─TCNBlock: 2-13                    [32, 59, 40000]           --\n",
-       "│    │    └─Sequential: 3-13             [32, 59, 40000]           7,021\n",
-       "│    └─TCNBlock: 2-14                    [32, 59, 40000]           --\n",
-       "│    │    └─Sequential: 3-14             [32, 59, 40000]           7,021\n",
-       "│    └─TCNBlock: 2-15                    [32, 59, 40000]           --\n",
-       "│    │    └─Sequential: 3-15             [32, 59, 40000]           7,021\n",
+       "TCN                                      [32, 59, 160]             --\n",
+       "├─Sequential: 1-1                        [32, 59, 160]             --\n",
+       "│    └─TCNBlock: 2-1                     [32, 59, 20480]           --\n",
+       "│    │    └─Sequential: 3-1              [32, 59, 20480]           27,907\n",
+       "│    └─TCNBlock: 2-2                     [32, 59, 10240]           --\n",
+       "│    │    └─Sequential: 3-2              [32, 59, 10240]           27,907\n",
+       "│    └─TCNBlock: 2-3                     [32, 59, 5120]            --\n",
+       "│    │    └─Sequential: 3-3              [32, 59, 5120]            27,907\n",
+       "│    └─TCNBlock: 2-4                     [32, 59, 2560]            --\n",
+       "│    │    └─Sequential: 3-4              [32, 59, 2560]            27,907\n",
+       "│    └─TCNBlock: 2-5                     [32, 59, 1280]            --\n",
+       "│    │    └─Sequential: 3-5              [32, 59, 1280]            27,907\n",
+       "│    └─TCNBlock: 2-6                     [32, 59, 640]             --\n",
+       "│    │    └─Sequential: 3-6              [32, 59, 640]             27,907\n",
+       "│    └─TCNBlock: 2-7                     [32, 59, 320]             --\n",
+       "│    │    └─Sequential: 3-7              [32, 59, 320]             27,907\n",
+       "│    └─TCNBlock: 2-8                     [32, 59, 160]             --\n",
+       "│    │    └─Sequential: 3-8              [32, 59, 160]             27,907\n",
+       "│    └─TCNBlock: 2-9                     [32, 59, 160]             --\n",
+       "│    │    └─Sequential: 3-9              [32, 59, 160]             27,907\n",
+       "│    └─TCNBlock: 2-10                    [32, 59, 160]             --\n",
+       "│    │    └─Sequential: 3-10             [32, 59, 160]             27,907\n",
+       "│    └─TCNBlock: 2-11                    [32, 59, 160]             --\n",
+       "│    │    └─Sequential: 3-11             [32, 59, 160]             27,907\n",
+       "│    └─TCNBlock: 2-12                    [32, 59, 160]             --\n",
+       "│    │    └─Sequential: 3-12             [32, 59, 160]             27,907\n",
        "==========================================================================================\n",
-       "Total params: 105,315\n",
-       "Trainable params: 105,315\n",
+       "Total params: 334,884\n",
+       "Trainable params: 334,884\n",
        "Non-trainable params: 0\n",
-       "Total mult-adds (G): 134.80\n",
+       "Total mult-adds (G): 37.01\n",
        "==========================================================================================\n",
-       "Input size (MB): 302.08\n",
-       "Forward/backward pass size (MB): 9062.40\n",
-       "Params size (MB): 0.42\n",
-       "Estimated Total Size (MB): 9364.90\n",
+       "Input size (MB): 309.33\n",
+       "Forward/backward pass size (MB): 625.91\n",
+       "Params size (MB): 1.34\n",
+       "Estimated Total Size (MB): 936.58\n",
        "=========================================================================================="
       ]
      },
-     "execution_count": 11,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
