--- a/notebooks/Playground.ipynb
+++ b/notebooks/Playground.ipynb
@@ -27,6 +27,9 @@
     "%reload_ext autoreload\n",
     "%autoreload 3\n",
     "\n",
+    "import torch\n",
+    "from torch import nn\n",
+    "from torchinfo import summary\n",
     "import pytorch_lightning as pl\n",
     "from src.b2bnet import B2BNetModel, RandomDataModule, OtkaDataModule\n",
     "from pytorch_lightning.loggers import TensorBoardLogger"
@@ -45,31 +48,30 @@
       "TPU available: False, using: 0 TPU cores\n",
       "IPU available: False, using: 0 IPUs\n",
       "HPU available: False, using: 0 HPUs\n",
-      "/opt/homebrew/Caskroom/miniforge/base/envs/b2bnet/lib/python3.10/site-packages/pytorch_lightning/trainer/setup.py:201: UserWarning: MPS available but not used. Set `accelerator` and `devices` using `Trainer(accelerator='mps', devices=1)`.\n",
-      "  rank_zero_warn(\n",
       "\n",
-      "  | Name        | Type             | Params\n",
-      "-------------------------------------------------\n",
-      "0 | encoder     | RNN              | 1.3 K \n",
-      "1 | fc          | Linear           | 6     \n",
-      "2 | decoder     | RNN              | 704 K \n",
-      "3 | b2b         | RNN              | 704 K \n",
-      "4 | fc_text     | Linear           | 3     \n",
-      "5 | loss_cls    | CrossEntropyLoss | 0     \n",
-      "6 | loss_reconn | MSELoss          | 0     \n",
-      "7 | loss_b2b    | MSELoss          | 0     \n",
-      "8 | loss_text   | MSELoss          | 0     \n",
-      "-------------------------------------------------\n",
-      "1.4 M     Trainable params\n",
+      "  | Name              | Type             | Params\n",
+      "-------------------------------------------------------\n",
+      "0 | subject_embedding | Embedding        | 204   \n",
+      "1 | encoder_fc        | Linear           | 512   \n",
+      "2 | encoder           | RNN              | 34.6 K\n",
+      "3 | decoder           | RNN              | 34.6 K\n",
+      "4 | decoder_fc        | Linear           | 531   \n",
+      "5 | fc                | Linear           | 18    \n",
+      "6 | b2b               | RNN              | 34.6 K\n",
+      "7 | loss_cls          | CrossEntropyLoss | 0     \n",
+      "8 | loss_reconn       | MSELoss          | 0     \n",
+      "9 | loss_b2b          | MSELoss          | 0     \n",
+      "-------------------------------------------------------\n",
+      "104 K     Trainable params\n",
       "0         Non-trainable params\n",
-      "1.4 M     Total params\n",
-      "5.642     Total estimated model params size (MB)\n"
+      "104 K     Total params\n",
+      "0.420     Total estimated model params size (MB)\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "85eca54a342a40daab515083d7e61315",
+       "model_id": "82984475b54e43efa099702dda3b2c22",
        "version_major": 2,
        "version_minor": 0
       },
@@ -81,21 +83,9 @@
      "output_type": "display_data"
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/homebrew/Caskroom/miniforge/base/envs/b2bnet/lib/python3.10/site-packages/pytorch_lightning/trainer/connectors/data_connector.py:430: PossibleUserWarning: The dataloader, val_dataloader, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 8 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
-      "  rank_zero_warn(\n",
-      "/opt/homebrew/Caskroom/miniforge/base/envs/b2bnet/lib/python3.10/site-packages/torch/nn/modules/loss.py:536: UserWarning: Using a target size (torch.Size([11])) that is different to the input size (torch.Size([11, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
-      "  return F.mse_loss(input, target, reduction=self.reduction)\n",
-      "/opt/homebrew/Caskroom/miniforge/base/envs/b2bnet/lib/python3.10/site-packages/pytorch_lightning/trainer/connectors/data_connector.py:430: PossibleUserWarning: The dataloader, train_dataloader, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 8 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
-      "  rank_zero_warn(\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "66da50badee545288a3916c5d3b8202b",
+       "model_id": "7160de68e5674ed4ae43111defb87d88",
        "version_major": 2,
        "version_minor": 0
       },
@@ -107,19 +97,9 @@
      "output_type": "display_data"
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/homebrew/Caskroom/miniforge/base/envs/b2bnet/lib/python3.10/site-packages/torch/nn/modules/loss.py:536: UserWarning: Using a target size (torch.Size([32])) that is different to the input size (torch.Size([32, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
-      "  return F.mse_loss(input, target, reduction=self.reduction)\n",
-      "/opt/homebrew/Caskroom/miniforge/base/envs/b2bnet/lib/python3.10/site-packages/torch/nn/modules/loss.py:536: UserWarning: Using a target size (torch.Size([8])) that is different to the input size (torch.Size([8, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
-      "  return F.mse_loss(input, target, reduction=self.reduction)\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6c7ba980e96c46c9a34c466adb10b2df",
+       "model_id": "6624792ddec54ea097a4f33c0c448fec",
        "version_major": 2,
        "version_minor": 0
       },
@@ -129,38 +109,26 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3f7aa2b1f43a4525b370f1bd6bbbda79",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "`Trainer.fit` stopped: `max_epochs=2` reached.\n"
-     ]
     }
    ],
    "source": [
     "# VISUALIZE model's graph\n",
-    "datamodule = OtkaDataModule()\n",
-    "model = B2BNetModel(input_size=59, n_timesteps=100, n_cls_labels=2, text_dim=1)\n",
     "\n",
+    "segment_size = 120*2\n",
+    "batch_size = 256\n",
+    "\n",
+    "datamodule = OtkaDataModule(segment_size=segment_size, batch_size=batch_size)\n",
+    "model = B2BNetModel(\n",
+    "    input_size=59,\n",
+    "    n_timesteps=segment_size,\n",
+    "    n_cls_labels=2,\n",
+    "    hidden_size=8,\n",
+    "    n_subjects=51)\n",
+    "\n",
+    "# summary(model)\n",
     "# TRAINING\n",
-    "trainer = pl.Trainer(max_epochs=2, accelerator='cpu', log_every_n_steps=1)\n",
-    "\n",
-    "trainer.fit(model, datamodule=datamodule)"
+    "trainer = pl.Trainer(max_epochs=2, accelerator='cpu', log_every_n_steps=1, enable_checkpointing=True)\n",
+    "trainer.fit(model, datamodule=datamodule, ckpt_path='last')"
    ]
   },
   {
@@ -173,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,20 +155,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([32, 59, 160])"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "batch_size = 32\n",
     "n_timesteps = 128 * 320\n",
@@ -208,65 +165,6 @@
     "X = torch.randn(batch_size, n_timesteps, n_features).permute(0, 2, 1)\n",
     "model = TCN(n_timesteps, output_length=128, n_features=n_features, kernel_size=8, dilation_base=2)\n",
     "model(X).shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "==========================================================================================\n",
-       "Layer (type:depth-idx)                   Output Shape              Param #\n",
-       "==========================================================================================\n",
-       "TCN                                      [32, 59, 160]             --\n",
-       "├─Sequential: 1-1                        [32, 59, 160]             --\n",
-       "│    └─TCNBlock: 2-1                     [32, 59, 20480]           --\n",
-       "│    │    └─Sequential: 3-1              [32, 59, 20480]           27,907\n",
-       "│    └─TCNBlock: 2-2                     [32, 59, 10240]           --\n",
-       "│    │    └─Sequential: 3-2              [32, 59, 10240]           27,907\n",
-       "│    └─TCNBlock: 2-3                     [32, 59, 5120]            --\n",
-       "│    │    └─Sequential: 3-3              [32, 59, 5120]            27,907\n",
-       "│    └─TCNBlock: 2-4                     [32, 59, 2560]            --\n",
-       "│    │    └─Sequential: 3-4              [32, 59, 2560]            27,907\n",
-       "│    └─TCNBlock: 2-5                     [32, 59, 1280]            --\n",
-       "│    │    └─Sequential: 3-5              [32, 59, 1280]            27,907\n",
-       "│    └─TCNBlock: 2-6                     [32, 59, 640]             --\n",
-       "│    │    └─Sequential: 3-6              [32, 59, 640]             27,907\n",
-       "│    └─TCNBlock: 2-7                     [32, 59, 320]             --\n",
-       "│    │    └─Sequential: 3-7              [32, 59, 320]             27,907\n",
-       "│    └─TCNBlock: 2-8                     [32, 59, 160]             --\n",
-       "│    │    └─Sequential: 3-8              [32, 59, 160]             27,907\n",
-       "│    └─TCNBlock: 2-9                     [32, 59, 160]             --\n",
-       "│    │    └─Sequential: 3-9              [32, 59, 160]             27,907\n",
-       "│    └─TCNBlock: 2-10                    [32, 59, 160]             --\n",
-       "│    │    └─Sequential: 3-10             [32, 59, 160]             27,907\n",
-       "│    └─TCNBlock: 2-11                    [32, 59, 160]             --\n",
-       "│    │    └─Sequential: 3-11             [32, 59, 160]             27,907\n",
-       "│    └─TCNBlock: 2-12                    [32, 59, 160]             --\n",
-       "│    │    └─Sequential: 3-12             [32, 59, 160]             27,907\n",
-       "==========================================================================================\n",
-       "Total params: 334,884\n",
-       "Trainable params: 334,884\n",
-       "Non-trainable params: 0\n",
-       "Total mult-adds (G): 37.01\n",
-       "==========================================================================================\n",
-       "Input size (MB): 309.33\n",
-       "Forward/backward pass size (MB): 625.91\n",
-       "Params size (MB): 1.34\n",
-       "Estimated Total Size (MB): 936.58\n",
-       "=========================================================================================="
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "summary(model, input_size=(batch_size, n_features, n_timesteps))"
    ]
   }
  ],
