--- a/notebooks/Playground.ipynb
+++ b/notebooks/Playground.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,6 +29,7 @@
     "\n",
     "import torch\n",
     "from torch import nn\n",
+    "import torch.nn.functional as F\n",
     "from torchinfo import summary\n",
     "import pytorch_lightning as pl\n",
     "from src.b2bnet import B2BNetModel, RandomDataModule, OtkaDataModule\n",
@@ -37,97 +38,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "GPU available: True (mps), used: False\n",
-      "TPU available: False, using: 0 TPU cores\n",
-      "IPU available: False, using: 0 IPUs\n",
-      "HPU available: False, using: 0 HPUs\n",
-      "\n",
-      "  | Name              | Type             | Params\n",
-      "-------------------------------------------------------\n",
-      "0 | subject_embedding | Embedding        | 204   \n",
-      "1 | encoder_fc        | Linear           | 512   \n",
-      "2 | encoder           | RNN              | 34.6 K\n",
-      "3 | decoder           | RNN              | 34.6 K\n",
-      "4 | decoder_fc        | Linear           | 531   \n",
-      "5 | fc                | Linear           | 18    \n",
-      "6 | b2b               | RNN              | 34.6 K\n",
-      "7 | loss_cls          | CrossEntropyLoss | 0     \n",
-      "8 | loss_reconn       | MSELoss          | 0     \n",
-      "9 | loss_b2b          | MSELoss          | 0     \n",
-      "-------------------------------------------------------\n",
-      "104 K     Trainable params\n",
-      "0         Non-trainable params\n",
-      "104 K     Total params\n",
-      "0.420     Total estimated model params size (MB)\n"
-     ]
-    },
-    {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "82984475b54e43efa099702dda3b2c22",
-       "version_major": 2,
-       "version_minor": 0
-      },
       "text/plain": [
-       "Sanity Checking: 0it [00:00, ?it/s]"
+       "(torch.Size([51, 39707, 59]), torch.Size([51, 39707, 59]))"
       ]
      },
+     "execution_count": 18,
      "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7160de68e5674ed4ae43111defb87d88",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Training: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6624792ddec54ea097a4f33c0c448fec",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# VISUALIZE model's graph\n",
+    "import xarray as xr\n",
     "\n",
-    "segment_size = 120*2\n",
-    "batch_size = 256\n",
+    "ds = xr.open_dataset('data/otka.nc5')\n",
+    "X_input = torch.from_numpy(ds['hypnotee'].values).float().permute(0, 2, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "segment_size = 120*1\n",
+    "batch_size = 32\n",
     "\n",
     "datamodule = OtkaDataModule(segment_size=segment_size, batch_size=batch_size)\n",
     "model = B2BNetModel(\n",
     "    input_size=59,\n",
     "    n_timesteps=segment_size,\n",
     "    n_cls_labels=2,\n",
-    "    hidden_size=8,\n",
+    "    hidden_size=32,\n",
     "    n_subjects=51)\n",
     "\n",
     "# summary(model)\n",
     "# TRAINING\n",
-    "trainer = pl.Trainer(max_epochs=2, accelerator='cpu', log_every_n_steps=1, enable_checkpointing=True)\n",
+    "trainer = pl.Trainer(max_epochs=100, accelerator='auto', log_every_n_steps=1, enable_checkpointing=True)\n",
     "trainer.fit(model, datamodule=datamodule, ckpt_path='last')"
    ]
   },
