refactor max_epochs

--- a/notebooks/Autoencoder Playground.ipynb
+++ b/notebooks/Autoencoder Playground.ipynb
@@ -95,12 +95,13 @@
     "n_timesteps = 120*10  # 10 sec\n",
     "n_features = 59\n",
     "hidden_size = 59\n",
+    "max_epochs = 1000\n",
     "\n",
     "datamodule = RandomDataModule(n_segments, n_timesteps, n_features)\n",
     "\n",
     "model = Autoencoder(n_features=n_features, hidden_size=hidden_size)\n",
     "\n",
-    "trainer = pl.Trainer(max_epochs=1000,accelerator='auto', log_every_n_steps=1)\n",
+    "trainer = pl.Trainer(max_epochs=max_epochs,accelerator='auto', log_every_n_steps=1)\n",
     "\n",
     "trainer.fit(model, datamodule=datamodule)"
    ]
