--- a/notebooks/Autoencoder Playground.ipynb
+++ b/notebooks/Autoencoder Playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,15 +61,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "GPU available: False, used: False\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "IPU available: False, using: 0 IPUs\n",
+      "HPU available: False, using: 0 HPUs\n",
+      "\n",
+      "  | Name       | Type   | Params\n",
+      "--------------------------------------\n",
+      "0 | encoder    | LSTM   | 28.3 K\n",
+      "1 | decoder    | LSTM   | 28.3 K\n",
+      "2 | fc_decoder | Linear | 3.5 K \n",
+      "--------------------------------------\n",
+      "60.2 K    Trainable params\n",
+      "0         Non-trainable params\n",
+      "60.2 K    Total params\n",
+      "0.241     Total estimated model params size (MB)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fee7fbcd9db3450396f6f8a443d422c5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Sanity Checking: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f2ebfa9210ea45e2ba37b965cade947d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "acc57170cec0433f8e1e32f0648dbc43",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b3879419b10b43aaade7847cd3091ca6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Experiment\n",
     "\n",
-    "segment_size = 120\n",
+    "segment_size = 120 * 1  # 1sec\n",
     "batch_size = 256\n",
-    "n_timesteps = 120*10  # 10 sec\n",
     "n_features = 59\n",
     "hidden_size = 59\n",
     "max_epochs = 100\n",
