update losses and stratified data split

--- a/notebooks/Playground.ipynb
+++ b/notebooks/Playground.ipynb
@@ -138,7 +138,7 @@
     "# Model\n",
     "\n",
     "class Autoencoder(pl.LightningModule):\n",
-    "    def __init__(self, n_features=8, hidden_size=8):\n",
+    "    def __init__(self, n_features, hidden_size):\n",
     "        super().__init__()\n",
     "\n",
     "        self.hidden_size = hidden_size\n",
@@ -148,8 +148,8 @@
     "        self.fc_decoder = nn.Linear(n_features, n_features)\n",
     "        \n",
     "        # b2b head\n",
-    "        self.b2b = nn.LSTM(hidden_size, n_features, batch_first=True)\n",
-    "        self.fc_decoder = nn.Linear(n_features, n_features)\n",
+    "        self.b2b_decoder = nn.LSTM(hidden_size, n_features, batch_first=True)\n",
+    "        self.fc_b2b_decoder = nn.Linear(n_features, n_features)\n",
     "        \n",
     "        # classifier head\n",
     "        self.cls = nn.Linear(hidden_size, 2)\n",
@@ -162,10 +162,12 @@
     "        y_enc, (h_enc, c_enc) = self.encoder(x)\n",
     "        x_enc = torch.rand(batch_size, n_timesteps, self.hidden_size)\n",
     "        y_dec, (h_dec, c_dec) = self.decoder(x_enc, (h_enc, c_enc))\n",
-    "        y_hat = self.fc_decoder(y_dec)\n",
+    "        y_dec = self.fc_decoder(y_dec)\n",
     "        \n",
     "        # b2b head\n",
-    "        y_b2b, (h_b2b, c_b2b) = self.b2b(x_enc, (h_enc, c_enc))\n",
+    "        x_enc_b2b = torch.rand(batch_size, n_timesteps, self.hidden_size)\n",
+    "        y_b2b, (h_b2b, c_b2b) = self.b2b_decoder(x_enc_b2b, (h_enc, c_enc))\n",
+    "        y_b2b = self.fc_b2b_decoder(y_b2b)\n",
     "        \n",
     "        # classifier head\n",
     "        y_cls = self.cls(h_enc[-1, :, :])  # last hidden state of encoder\n",
@@ -179,12 +181,12 @@
     "        loss_reconn = nn.functional.mse_loss(X_recon, X)\n",
     "        loss_b2b = nn.functional.mse_loss(y_b2b_hat, y_b2b)\n",
     "        loss_cls = nn.functional.cross_entropy(y_cls_hat, y_cls)\n",
-    "        loss = loss_reconn + loss_b2b + loss_cls\n",
+    "        loss = loss_reconn + loss_cls + loss_b2b\n",
     "        #logging\n",
     "        self.log('train/loss_reconn', loss_reconn)\n",
     "        self.log('train/loss_b2b', loss_b2b)\n",
     "        self.log('train/loss_cls', loss_cls)\n",
-    "        self.log('train/acc', (y_cls_hat.argmax(dim=1) == y_cls).float().mean())\n",
+    "        self.log('train/accuracy', (y_cls_hat.argmax(dim=1) == y_cls).float().mean())\n",
     "        self.log('train/loss', loss)\n",
     "        return loss\n",
     "\n",
@@ -195,12 +197,12 @@
     "        loss_reconn = nn.functional.mse_loss(X_recon, X)\n",
     "        loss_b2b = nn.functional.mse_loss(y_b2b_hat, y_b2b)\n",
     "        loss_cls = nn.functional.cross_entropy(y_cls_hat, y_cls)\n",
-    "        loss = loss_reconn + loss_b2b + loss_cls\n",
+    "        loss = loss_reconn + loss_cls + loss_b2b\n",
     "        #logging\n",
     "        self.log('val/loss_reconn', loss_reconn)\n",
     "        self.log('val/loss_b2b', loss_b2b)\n",
     "        self.log('val/loss_cls', loss_cls)\n",
-    "        self.log('val/acc', (y_cls_hat.argmax(dim=1) == y_cls).float().mean())\n",
+    "        self.log('val/accuracy', (y_cls_hat.argmax(dim=1) == y_cls).float().mean())\n",
     "        self.log('val/loss', loss)\n",
     "        return loss\n",
     "\n",
@@ -216,11 +218,11 @@
    "source": [
     "# Experiment\n",
     "\n",
-    "segment_size = 120 * 1  # 1sec\n",
+    "segment_size = 120 * 3  # 3sec\n",
     "batch_size = 256\n",
     "n_features = 59\n",
     "hidden_size = 59\n",
-    "max_epochs = 10\n",
+    "max_epochs = 1000\n",
     "\n",
     "datamodule = OtkaDataModule(segment_size=segment_size, batch_size=batch_size)\n",
     "\n",
