Implement space time autoencoder

--- a/notebooks/Playground.ipynb
+++ b/notebooks/Playground.ipynb
@@ -21,7 +21,7 @@
     "import torch.nn.functional as F\n",
     "from torchinfo import summary\n",
     "import pytorch_lightning as pl\n",
-    "from src.b2bnet import B2BNetModel, Autoencoder, OtkaDataModule, OtkaTimeDimSplit\n",
+    "from src.b2bnet import B2BNetModel, OtkaDataModule, OtkaTimeDimSplit\n",
     "from pytorch_lightning.loggers import TensorBoardLogger"
    ]
   },
@@ -2924,7 +2924,7 @@
     "\n",
     "datamodule = OtkaTimeDimSplit(segment_size=segment_size, batch_size=batch_size)\n",
     "\n",
-    "model = Autoencoder(n_features=n_features, hidden_size=hidden_size, n_subjects=51)\n",
+    "model = B2BNetModel(n_features=n_features, hidden_size=hidden_size, n_subjects=51)\n",
     "\n",
     "trainer = pl.Trainer(max_epochs=max_epochs,accelerator='cpu', log_every_n_steps=1, deterministic='warn')\n",
     "\n",
